Fixat register form

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style">
 </head>
 <body>
     <div class="topnav">
-        <a href="index.html">Hem</a>
-        <a href="topic.html">Topic</a>
-        <a href="kontakt.html">Kontakt</a>
-        <a href="trådar.html">trådar</a>
+        <a href="index">Hem</a>
+        <a href="topic">Topic</a>
+        <a href="kontakt">Kontakt</a>
+        <a href="tradar">trådar</a>
       </div>
       <div style="padding-left:16px">
         <h2>Top Navigation Example</h2>
@@ -20,4 +20,4 @@
       </div>
     
 </body>
-</html>-
+</html>
