--- a/news.html
+++ b/news.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style">
 </head>
 <body>
-    <div class="topnav">
-        <a href="index.html">Hem</a>
-        <a href="topic.html">Topic</a>
-        <a href="kontakt.html">Kontakt</a>
-        <a href="trådar.html">trådar</a>
-      </div>
+  <div class="topnav">
+    <a href="index">Hem</a>
+    <a href="topic">Topic</a>
+    <a href="kontakt">Kontakt</a>
+    <a href="tradar">trådar</a>
+  </div>
       <div style="padding-left:16px">
         <h2>Top Navigation Example</h2>
         <p>Some content..</p>
