--- a/tradar.html
+++ b/tradar.html
@@ -12,7 +12,7 @@
         <a href="index">Hem</a>
         <a href="topic">Topic</a>
         <a href="kontakt">Kontakt</a>
-        <a href="trådar">trådar</a>
+        <a href="tradar">trådar</a>
       </div>
       <div style="padding-left:16px">
         <h2>Top Navigation Example</h2>
