--- a/kontakt.html
+++ b/kontakt.html
@@ -34,7 +34,7 @@
       <form action="/register" method="POST">
         <h1>Registrera</h1>
         <label for="email">Email</label><br>
-        <input type="email" id="Email" name="email"><br>
+        <input type="email" id="email" name="email"><br>
         <label for="name">Login Name</label><br>
         <input type="text" id="Namn" name="name"><br>
         <label for="password">Password:</label><br>
