Mycke skit wallahi

--- a/news.html
+++ b/news.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style">
 </head>
+
 <body>
-  <div class="topnav">
-    <a href="index">Hem</a>
-    <a href="topic">Trådar</a>
-    <a href="kontakt">Registrera / Logga in</a>
-    <a href="tradar">Om oss</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+    <a class="navbar-brand" href="index">Ashur's Forum</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse flex-grow-0 " id="navbarNavDropdown">
+        <ul class="navbar-nav justify-content-center">
+            <li class="nav-item active">
+                <a class="nav-link" href="index">Hem <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="topic">Trådar</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="kontakt">Registrera / Logga in</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="tradar">Om Oss</a>
+          </li>
+        </ul>
+    </div>
+</nav>
+  <div style="padding-left:16px">
+    <h2>Top Navigation Example</h2>
+    <p>Some content..</p>
   </div>
-      <div style="padding-left:16px">
-        <h2>Top Navigation Example</h2>
-        <p>Some content..</p>
-      </div>
-    
+
 </body>
-</html>-
+
+</html>
